# sdl-game

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  emscripten.mk
WebGL/: emscripten.mk  shell_minimal.html
myengine/: CMakeLists.txt  Makefile
myengine/WebGL/: emscripten.mk
myengine/src/: EventHandler.cpp  EventHandler.h  Interface.cpp  Interface.h  Renderer.cpp  Renderer.h  Shape.cpp  Shape.h  engine.cpp  engine.h  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h
src/: Player.cpp  Player.h  main.cpp
